Correction de contrast de la couleur en footer et correction de réseaux sociaux

--- a/style.css
+++ b/style.css
@@ -736,7 +736,7 @@ h4 {
 }
 
 .white {
-    color: #FFFFFF!important;
+    color: #373737!important;
 }
 
 .portfolio-thumb {
